compiler/tests/fa/errors/redefine_fa.salam
// انتظار: خطا۰۶۱
// زبان: فارسی
تابع کار():
پایان
تابع کار():
پایان
تابع اصلی:
    چاپ 1
پایان
